[package]
name = "seabird-radio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
chrono-tz = "0.10.4"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
seabird = "0.3.0-alpha.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
